# veesion-test

./: .gitignore  INTERVIEW.md  README.md  compose.yml  k8s-alertsystem.yml  setup_local.sh  test_1000_messages.sh
alert-service/: Dockerfile  pyproject.toml
alert-service/app/: main.py  models.py
alert-worker/: Dockerfile  entrypoint.sh  pyproject.toml
alert-worker/app/: Downloader.py  db.py  init_db.py  models.py  worker.py
postgres/: Dockerfile  init.sql
