[project]
name = "alert-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.41",
]
